(fix) Align content in the center

--- a/src/styles/elements/GeoSegmentedControl/_geo-segmented-control-item.scss
+++ b/src/styles/elements/GeoSegmentedControl/_geo-segmented-control-item.scss
@@ -18,6 +18,11 @@
   }
 }
 
+.geo-segmented-control-item,
+.geo-trimmed-content {
+  justify-content: center;
+}
+
 .geo-segmented-control-item {
   height: 24px;
 
